--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Sign in</title>
+    <title></title>
+	<link rel="stylesheet" href="Style.css" >
 </head>
 <body>
     <form action="/" method="post">
-        <table>
-            <tr>
-                <td><label>Username:</label></td>
-                <td>
-                    <input type="text" name="usern" value="" /></td>
-            </tr>
-             <tr>
-                <td><label>Password:</label></td>
-                <td>
-                    <input type="password" name="password" value="" /></td>
-            </tr>
-             <tr>
-                <td>
-                    <input type="submit" name="Submit" value="Sign in" /></td>
-            </tr>
-        </table>
-
-    </form>
+    <table>
+        <tr>
+            <td><label>Username</label></td>
+            <td>
+                <input type="text" name="username" value="" /></td>
+        </tr>
+                <tr>
+            <td><label>password</label></td>
+            <td>
+                <input type="password" name="password" value="" /></td>
+        </tr>
+                        <tr>
+  
+            <td>
+                <input type="submit" name="submit" value="Login" /></td>
+        </tr>
+    </table>
+        </form>
 </body>
 </html>
